# alpigolib

./: README.md  pyproject.toml
alpigolib/: __init__.py  base.py  core.py
alpigolib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alpigolib/crypto/: __init__.py  crypto.py
alpigolib/experimental/env/: env.py
alpigolib/experimental/msgbox/: __init__.py  actions.py  buttons.py  msgbox.py
alpigolib/experimental/scheduler/: __init__.py  scheduler.py
alpigolib/logger/: logger.py
alpigolib/network/: network.py
alpigolib/providers/: anthropic.py  gemini.py  openai.py
alpigolib/system/: __init__.py  battery.py  cpu.py  disk.py  init.py  os_name.py  os_version.py  ram.py  summary.py  system.py  uptime.py
alpigolib/testing/: app.py  experimentals_test.py  os_test.py
alpigolib/utils/: utils.py
